# clusters

./: Makefile  README.md  clusters.code-workspace  compose.yaml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/app/: main.py
backend/app/endpoints/: healthcheck.py
docs/: DEPLOY.md  DEVELOPMENT.md
frontend/: Makefile  biome.json  package-lock.json  package.json  vite.config.ts
frontend/src/components/: App.tsx  Content.tsx  Header.tsx  SideNavi.tsx  store.ts
frontend/src/components/post/: Post.tsx  UserIcon.tsx  utils.ts
frontend/src/components/stream/: SideContents.tsx  Stream.tsx  StreamInfo.tsx
frontend/src/models/: post.ts  user.ts
frontend/src/pages/: index.html  index.tsx
local/nginx/: default.conf
