[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.116.1"]
path=["."]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.13.0"]

[tool.ruff]
extend-select = ["I"]
indent-width = 4
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
